// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/upload-from-url/instagram single reel Publish the Post video gets published 1`] = `
Ok {
  "value": Object {
    "postId": "17957350709060432",
    "url": "https://www.instagram.com/reel/Ci0FuMbKuJ7/",
  },
}
`;

exports[`social-media/upload-from-url/instagram single reel RegisterUpload should return an id 1`] = `
Ok {
  "value": Object {
    "uploadId": "17944248500128615",
  },
}
`;

exports[`social-media/upload-from-url/instagram single video Publish the Post video gets published 1`] = `
Ok {
  "value": Object {
    "postId": "17872934387765074",
    "url": "https://www.instagram.com/p/Ci0Fp2WKFEd/",
  },
}
`;

exports[`social-media/upload-from-url/instagram single video RegisterUpload should return an id 1`] = `
Ok {
  "value": Object {
    "uploadId": "17873072687761945",
  },
}
`;
